deployment/k8s.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      name: http
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"      
      labels:
        app: frontend
        version: v1
    spec:
      containers:
      - name: frontend
        image: samuelpereiradesouza/frontend:1
        ports:
        - containerPort: 80
      restartPolicy: Always
---
